--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,8 @@
     "minimum-stability": "dev",
     "require" : {
         "php" : "^7.1",
-        "psr/http-message": "^1.0",
-        "guzzlehttp/psr7": "^1.4",
-        "http-interop/http-factory": "dev-master"
+        "http-interop/http-factory": "dev-master",
+        "guzzlehttp/psr7": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1"
